@@ -3,7 +3,7 @@
 # Copyright © 1996, 1997, 1998, 1999, 2000, 2001 Free Software Foundation, Inc.
 # François Pinard <pinard@iro.umontreal.ca>, 1996.
 
-VERSION=1.92
+VERSION=1.93
 
 extra_dir=../site/extra
 
@@ -77,6 +77,6 @@ pot:
 	python lib/registry.py >>po/tp-robot.pot
 
 dist:
-	tar -cz -f ../site/tarballs/translationproject-${VERSION}.tgz \
-	    --transform='s:^\./:translationproject-${VERSION}/:' \
+	tar -cz -f ../site/bundle/tp-robot-${VERSION}.tgz \
+	    --transform='s:^\./:tp-robot-${VERSION}/:' \
 	    --exclude=.svn  .
