@@ -8,6 +8,11 @@
 
 	* bin/po-register: Grr... -- programming is difficult.
 
+	* registry/registry.sgml: Cleanups.
+
+	* Makefile: Renaming 'tarballs/' to 'bundle/', and keeping the old,
+	incorrect name for the 'tp-robot' package for now.
+
 2007-06-29  Benno Schulenberg  <benno@vertaalt.nl>
 
 	* lib/config.py, bin/po-register: Stop making symlinks in packages/.
